plugins {
    id 'com.android.application'
}

android {
    namespace "com.kitchenboard"
    compileSdk 34

    defaultConfig {
        applicationId "com.kitchenboard"
        minSdk 15
        targetSdk 34
        versionCode System.getenv("BUILD_NUMBER")?.toInteger() ?: 1
        versionName "1.0"
        buildConfigField "String", "GITHUB_ISSUE_TOKEN",
                "\"${System.getenv('GITHUB_ISSUE_TOKEN') ?: project.findProperty('GITHUB_ISSUE_TOKEN') ?: ''}\""
    }

    signingConfigs {
        debug {
            storeFile file('debug.keystore')
            storePassword 'android'
            keyAlias 'androiddebugkey'
            keyPassword 'android'
        }
    }

    buildTypes {
        debug {
            signingConfig signingConfigs.debug
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    buildFeatures {
        buildConfig true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

configurations.all {
    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk7"
    exclude group: "org.jetbrains.kotlin", module: "kotlin-stdlib-jdk8"
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.fragment:fragment:1.6.1'
    implementation 'androidx.viewpager2:viewpager2:1.0.0'
    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
}

tasks.register('printVersionName') {
    doLast {
        println android.defaultConfig.versionName
    }
}
